# Esp-flasher

./: CODE_OF_CONDUCT.md  LICENSE  README.md  index.html  package.json  tailwind.config.cjs
.github/workflows/: release.yml
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: flasher.rs  main.rs  progress.rs
src/lib/: AdvancedOptions.svelte  Footer.svelte  From.svelte  Header.svelte  Options.svelte  Progress.svelte  Stdout.svelte  Stepper.svelte  Titlebar.svelte
src/utils/: devices.ts  store.ts
