[package]
name = "esp-flasher"
version = "0.0.1"
description = "An app to flash firmware on esp devices"
authors = ["mathieu andrade"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-open", "shell-open", "window-close", "window-minimize", "window-set-size", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
espflash = "2.0.0-rc.3"
serialport = "4.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
